# suture

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  feature_request.md
.github/workflows/: ci.yml
docs/: first-release.md  package-name-check.md  repo-description.md
examples/broken-projects/broken-script-entrypoint/: pyproject.toml
examples/broken-projects/malformed-pyproject/: pyproject.toml
examples/broken-projects/missing-env-example/: pyproject.toml
examples/broken-projects/missing-env-example/app/: config.py
examples/broken-projects/missing-env-gitignore/: .env  app.py
examples/broken-projects/mixed-requirements-pyproject/: pyproject.toml
examples/broken-projects/src-layout-no-pytest-path/: pyproject.toml
examples/broken-projects/src-layout-no-pytest-path/src/demo_pkg/: __init__.py
scripts/: check_release_ready.py  preflight.py  validate_examples.py  verify_package.py
src/suture/: cli.py  doctor.py  fixer.py  models.py  report.py
src/suture/checks/: __init__.py  env.py  imports.py  pyproject.py
tests/: conftest.py  test_check_release_ready.py  test_env.py  test_examples.py  test_imports.py  test_path_support.py  test_pyproject.py
