[project]
name = "suture-py"
version = "0.1.5"
description = "A Python project setup doctor that diagnoses broken imports, env files, pyproject config, and pytest setup issues."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Muhammed Idris Bin Yacoob" },
]
keywords = [
  "python",
  "cli",
  "diagnostics",
  "pyproject",
  "pytest",
  "env",
  "developer-tools",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
suture = "suture.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "ruff",
    "twine>=5.0.0",
]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "suture"

[tool.flit.sdist]
exclude = [
    "scripts/",
    "docs/",
    ".github/",
    "RELEASE.md",
    "uv.lock",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
