[project]
name = "demo-pkg"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
demo = "demo_pkg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_pkg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
